[ft #160917897] Update validations on place order endpoint

--- a/views/add-food-item.html
+++ b/views/add-food-item.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Fast-Food-Fast | Orders</title>
+  <title>Fast-Food-Fast | Create Menu</title>
   <link rel="stylesheet" href="css/orders.css">
   <link rel="icon" type="image/png" href="img/logo.png">
   <script src="js/fetch/authorize-user.js"></script>
