[ft #160920864] Fetch get all orders endpoint

--- a/views/admin-food-items.html
+++ b/views/admin-food-items.html
@@ -26,7 +26,7 @@
         <a href="#">
           <div class="menu menu1">All Food Items &#10148;</div>
         </a>
-        <a href="admin-orders.html">
+        <a href="all-orders-admin.html">
           <div class="menu menu2">All orders &#10148;</div>
         </a>
       </div>
