--- a/views/all-orders-admin.html
+++ b/views/all-orders-admin.html
@@ -35,8 +35,8 @@
 
     <div class="dashboard-content">
 
-      <div class="toggle-menu">
-        <span>&#10149;</span>
+      <div class="toggle-menu" id="toggle-menu">
+       <strong>options</strong><span>&#10149;</span>
       </div>
 
       <div class="dashboard-content-bg">
@@ -77,6 +77,7 @@
   <script src="js/fetch/admin-get-all-orders.js"></script>
   <script src="js/scroll.js"></script>
   <script src="js/modifyStatus.js"></script>
+  <script src="js/fetch/toggle-menu.js"></script>
 </body>
 
 </html>
