--- a/views/css/orders.css
+++ b/views/css/orders.css
@@ -8,41 +8,13 @@ body {
 }
 
 .dashboard {
-  display: flex;
   min-height: 100vh;
 }
 
-.dashboard-menu{
-  flex: 1;
-  background: #52bad5;
-  display: flex;
-  flex-direction: column;
-  display: none;
-}
-
-.toggle-menu {
-  background: #52bad5;
-  width: 60px;
-  height: 35px;
-  text-align: center;
-  position: fixed;
-  font-size: 25px;
-  color: #fff;
-  padding: 3px;
-}
-
-.toggle-menu span {
-  padding: 0 5px;
-  background: orange;
-  border-radius: 5px;
-  box-shadow: 1px 1px 2px 1px #000;
-  cursor: pointer;
-}
-
 .dashboard-content {
-  flex: 4;
   background-image: url('../img/banner1.jpg');
   background-size: cover;
+  height: 100vh;
 }
 
 .dashboard-content-bg {
@@ -82,13 +54,10 @@ body {
 }
 /* */
 .orders-list {
-  display: flex;
-  flex-direction: column;
   margin: 50px auto;
-  border: #cccccc 1px solid;
-  padding: 10px;
+  background: rgba(194, 209, 202, 0.2);
+  padding: 20px;
   border-radius: 10px;
-  position: relative;
   max-width: 1200px;
   overflow-x:auto;
 }
@@ -116,6 +85,7 @@ tr:first-child {
 }
 .items {
   max-width: 350px;
+  min-width: 250px;
   max-height: 150px;
   overflow: auto;
   border: gray 1px solid;
@@ -176,22 +146,45 @@ tr:first-child {
   cursor: pointer;
 }
 
-.menu-bottom {
-  flex: 1;
+.dashboard-menu{
+  background: #52bad5;
+  flex-direction: column;
+  display: none;
+  position: fixed;
+  height: 95vh;
+  padding: 20px;
+  box-shadow: 1px 1px 2px 1px #000;
+  transition: 0.5s;
+  transition-timing-function: ease-out;
 }
 
-.menu-top{
-  flex: 1;
-  margin: 10px 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+.toggle-menu {
+  background: #52bad5;
+  width: 90px;
+  height: 35px;
   text-align: center;
+  position: fixed;
+  color: #fff;
+  transition: 0.5s;
+  transition-timing-function: ease-out;
+  padding: 3px 10px;
+  line-height: 30px;
+}
+
+.toggle-menu span {
+  padding: 0 5px;
+  background: orange;
+  border-radius: 5px;
+  box-shadow: 1px 1px 2px 1px #000;
+  cursor: pointer;
+  float: right;
+  font-size: 25px;
 }
 
 .welcome {
   display: flex;
-  justify-content: space-between
+  justify-content: space-between;
+  margin-top: 50px;
 }
 
 .welcome span {
@@ -210,13 +203,17 @@ tr:first-child {
   padding: 8px;
   background: #efefef;
   border-radius: 10px;
-  box-shadow: 1px 1px 2px 1px black;
+  box-shadow: 1px 1px 2px 1px gray;
   cursor: pointer;
 }
 
 .menu-top > a {
   text-decoration: none;
   color: #000;
+}
+
+.menu-top > a > div {
+  margin-top: 20px;
 }
 
 .menu-top img {
