[ft #160921555] implement fetch API on cancel-order endpoint

--- a/views/all-orders-admin.html
+++ b/views/all-orders-admin.html
@@ -36,10 +36,13 @@
     <div class="dashboard-content">
 
       <div class="toggle-menu" id="toggle-menu">
-       <strong>options</strong><span>&#10149;</span>
+        <strong>options</strong><span>&#10149;</span>
       </div>
 
       <div class="dashboard-content-bg">
+          <div class="pageAlert">
+        
+          </div>
         <div class="page-title all-orders">
           <div>MEAL ORDERS LIST</div>
         </div>
@@ -76,7 +79,6 @@
   <script src="js/fetch/utility.js"></script>
   <script src="js/fetch/admin-get-all-orders.js"></script>
   <script src="js/scroll.js"></script>
-  <script src="js/modifyStatus.js"></script>
   <script src="js/fetch/toggle-menu.js"></script>
 </body>
 
