--- a/views/add-menu.html
+++ b/views/add-menu.html
@@ -18,15 +18,15 @@
       <div class="menu-top">
         <div class="welcome">
           <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
-          <span><a href="food-items.html">Fast Food Fast</a> </span>
+          <span><a href="menu.html">Fast Food Fast</a> </span>
         </div>
         <a href="#">
           <div class="menu menu1">Add Item &#10148;</div>
         </a>
-        <a href="admin-food-items.html">
+        <a href="menu-admin.html">
           <div class="menu menu1">All Food Items &#10148;</div>
         </a>
-        <a href="all-orders-admin.html">
+        <a href="orders-admin.html">
           <div class="menu menu2">All orders &#10148;</div>
         </a>
       </div>
