--- a/views/orders-admin.html
+++ b/views/orders-admin.html
@@ -20,10 +20,10 @@
           <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
           <span><a href="food-items.html">Fast Food Fast</a> </span>
         </div>
-        <a href="add-food-item.html">
+        <a href="add-menu.html">
           <div class="menu menu1">Add Item &#10148;</div>
         </a>
-        <a href="admin-food-items.html">
+        <a href="menu-admin.html">
           <div class="menu menu1">All Food Items &#10148;</div>
         </a>
         <a href="#">
@@ -66,7 +66,7 @@
   </div>
 
   <div class="scroll-top">&#9652;</div>
-  <a href="food-items.html">
+  <a href="menu.html">
     <div class="user-front">View menu</div>
   </a>
 
@@ -77,7 +77,7 @@
   </footer>
 
   <script src="js/fetch/utility.js"></script>
-  <script src="js/fetch/admin-get-all-orders.js"></script>
+  <script src="js/fetch/orders-admin.js"></script>
   <script src="js/scroll.js"></script>
   <script src="js/fetch/toggle-menu.js"></script>
 </body>
