--- a/views/orders.html
+++ b/views/orders.html
@@ -12,25 +12,27 @@
 
 <body>
   <div class="dashboard">
-    <!-- <div class="dashboard-menu">
+
+    <div class="dashboard-menu">
       <div class="menu-top">
         <div class="welcome">
-         <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
+          <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
           <span><a href="food-items.html">Fast Food Fast</a> </span>
         </div>
-        <div class="menu menu1" id="pending">Pending orders &#10148;</div>
-        <div class="menu menu1" id="accepted">Accepted orders &#10148;</div>
-        <div class="menu menu2" id="declined">Declined orders &#10148;</div>
-        <div class="menu menu3" id="completed">Completed orders &#10148;</div>
-        <div class="menu"><span class="all-orders">Total &#10148; 8</span></div>
+        <a href="menu.html">
+          <div class="menu menu1">View Menu &#10148;</div>
+        </a>
+        <a href="#">
+          <div class="menu menu2 logout">Logout &#10148;</div>
+        </a>
       </div>
       <div class="menu-bottom"></div>
-    </div> -->
-    
+    </div>
+
     <div class="dashboard-content">
 
       <div class="toggle-menu" id="toggle-menu">
-       <strong>options</strong><span>&#10149;</span>
+        <strong>options</strong><span>&#10149;</span>
       </div>
 
       <div class="dashboard-content-bg">
@@ -55,9 +57,11 @@
 
     </div>
 
-    </div>
   </div>
-  <a href="food-items.html"><div class="user-front">View menu</div></a>
+  </div>
+  <a href="menu.html">
+    <div class="user-front">View menu</div>
+  </a>
   <div class="scroll-top">&#9652;</div>
 
   <footer class="footer">
@@ -67,9 +71,10 @@
   </footer>
 
   <script src="js/fetch/utility.js"></script>
-  <!-- <script src="js/fetch/jwt-decode.min.js"></script> -->
+  <script src="js/fetch/toggle-menu.js"></script>
   <script src="js/fetch/user-order-history.js"></script>
   <script src="js/scroll.js"></script>
+  <script src="js/fetch/logout.js"></script>
 </body>
 
 </html>
