--- a/views/orders-admin.html
+++ b/views/orders-admin.html
@@ -17,8 +17,8 @@
     <div class="dashboard-menu">
       <div class="menu-top">
         <div class="welcome">
-          <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
-          <span><a href="food-items.html">Fast Food Fast</a> </span>
+          <a href="menu.html"><img src="img/logo.png" alt="logo"></a>
+          <span><a href="menu.html">Fast Food Fast</a> </span>
         </div>
         <a href="add-menu.html">
           <div class="menu menu1">Add Item &#10148;</div>
@@ -28,6 +28,9 @@
         </a>
         <a href="#">
           <div class="menu menu2">All orders &#10148;</div>
+        </a>
+        <a href="#">
+          <div class="menu menu2 logout">Logout &#10148;</div>
         </a>
       </div>
       <div class="menu-bottom"></div>
@@ -80,6 +83,7 @@
   <script src="js/fetch/orders-admin.js"></script>
   <script src="js/scroll.js"></script>
   <script src="js/fetch/toggle-menu.js"></script>
+  <script src="js/fetch/logout.js"></script>
 </body>
 
 </html>
