--- a/views/unauthorized.html
+++ b/views/unauthorized.html
@@ -31,7 +31,7 @@
       setInterval(() => {
         document.querySelector('.loader').style.display = 'inline-block';
       }, 300);
-      setTimeout(() => location.assign('food-items.html'), 3000);
+      setTimeout(() => location.assign('menu.html'), 3000);
       document.write(new Date().getFullYear());
     </script> <strong>Fast-Food-Fast</strong> developed & designed by <em>Marcdomain</em>
   </footer>
