--- a/views/orders.html
+++ b/views/orders.html
@@ -59,8 +59,8 @@
 
   </div>
   </div>
-  <a href="menu.html">
-    <div class="user-front">View menu</div>
+  <a href="menu-admin.html" class="admin-view">
+    <div class="user-front">Admin dashboard</div>
   </a>
   <div class="scroll-top">&#9652;</div>
 
