--- a/views/specific-user-orders-admin.html
+++ b/views/specific-user-orders-admin.html
@@ -17,8 +17,8 @@
     <div class="dashboard-menu">
       <div class="menu-top">
         <div class="welcome">
-          <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
-          <span><a href="food-items.html">Fast Food Fast</a> </span>
+          <a href="menu.html"><img src="img/logo.png" alt="logo"></a>
+          <span><a href="menu.html">Fast Food Fast</a> </span>
         </div>
         <a href="add-menu.html">
           <div class="menu menu1">Add Item &#10148;</div>
@@ -26,7 +26,7 @@
         <a href="menu-admin.html">
           <div class="menu menu1">All Food Items &#10148;</div>
         </a>
-        <a href="#">
+        <a href="orders-admin.html">
           <div class="menu menu2">All orders &#10148;</div>
         </a>
         <a href="#">
@@ -43,9 +43,9 @@
       </div>
 
       <div class="dashboard-content-bg">
-          <div class="pageAlert padAlertDiv">
-        
-          </div>
+        <div class="pageAlert padAlertDiv">
+
+        </div>
         <div class="page-title all-orders">
           <div class="user-info"></div>
         </div>
