--- a/views/orders-admin.html
+++ b/views/orders-admin.html
@@ -67,6 +67,27 @@
 
     </div>
   </div>
+  <div class="modal">
+    <div class="specific-order">
+      <div class="order-details">
+        <div class="order-title">
+
+        </div>
+        <div class="order-data">
+
+        </div>
+      </div>
+      <div class="user-details">
+          <div class="user-title">
+          
+          </div>
+          <div class="user-data">
+
+          </div>
+
+      </div>
+    </div>
+  </div>
 
   <div class="scroll-top">&#9652;</div>
   <a href="menu.html">
